--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ layout: default
 
 <div class="row-fluid">
 	<div class="span12">
-		<div class="pagination">
-			<ul>
+		<div class="bs-component">
+			<ul class="pagination">
 				{% if paginator.previous_page %}
 				{% if paginator.previous_page == 1 %}
 				<li><a href="/">Prev</a></li>
@@ -39,16 +39,16 @@ layout: default
 				<li><a href="/page{{ paginator.previous_page }}">Prev</a></li>
 				{% endif %}
 				{% else %}
-				<li><span class="disabled">Prev</span></li>
+				<li class="disabled"><a>Prev</a></li>
 				{% endif %}
 				{% if paginator.page == 1 %}
-				<li><span class="active">1</span></li>
+				<li class="active"><a>1</a></li>
 				{% else %}
 				<li><a href="/">1</a></li>
 				{% endif %}
 				{% for count in (2..paginator.total_pages) %}
 					{% if count == paginator.page %}
-					<li><span class="active">{{ count }}</span></li>
+					<li class="active"><a>{{ count }}</a></li>
 					{% else %}
 					<li><a href="/page{{ count }}">{{ count }}</a></li>
 					{% endif %}
@@ -56,7 +56,7 @@ layout: default
 				{% if paginator.next_page %}
 				<li><a href="/page{{ paginator.next_page }}">Next</a></li>
 				{% else %}
-				<li><span class="disabled">Next</span></li>
+				<li class="disabled"><a>Next</a></li>
 				{% endif %}
 			</ul>
 		</div>
