--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ title: Blog
 layout: default
 ---
 
-<div class="row-fluid">
-	<div class="span12">
+<div class="row">
+	<div class="col-lg-12">
 		<h2>Blog</h2>
 	</div>
 </div>
 
 {% for post in paginator.posts %}
-<div class="row-fluid">
-	<div class="span12">
+<div class="row">
+	<div class="col-lg-12">
 		<h2>{{ post.title }}</h2>
 		<p>{{ post.subtitle }}</p>
 		<p class="muted">
@@ -28,8 +28,8 @@ layout: default
 </div>
 {% endfor %}
 
-<div class="row-fluid">
-	<div class="span12">
+<div class="row">
+	<div class="col-lg-12">
 		<div class="bs-component">
 			<ul class="pagination">
 				{% if paginator.previous_page %}
