--- a/index.html
+++ b/index.html
@@ -1,64 +1,24 @@
 ---
-title: Blog
-layout: default
+title: Home
+layout: default-fluid
 ---
 
-<div class="row">
-	<div class="col-lg-12">
-		<h2>Blog</h2>
-	</div>
-</div>
-
-{% for post in paginator.posts %}
-<div class="row">
-	<div class="col-lg-12">
-		<h2>{{ post.title }}</h2>
-		<p>{{ post.subtitle }}</p>
-		<p class="muted">
-			<i class="icon-calendar"></i>
-			{{ post.date | date_to_long_string }}
-		<br>
-			<i class="icon-tag"></i>
-			{% for tag in post.tags %}
-			<a href="/tag/{{ tag }}"><span class="label label-info">{{ tag }}</span></a>
-			{% endfor %}
-		</p>
-		<p><a href="{{ post.url }}">Read Post</a></p>
-	</div>
-</div>
-{% endfor %}
+<!-- Warming Up -->
+<link href='http://fonts.googleapis.com/css?family=Buenard:700' rel='stylesheet' type='text/css'>
+<script src="http://pupunzi.com/mb.components/mb.YTPlayer/demo/inc/jquery.mb.YTPlayer.js"></script>
 
 <div class="row">
-	<div class="col-lg-12">
-		<div class="bs-component">
-			<ul class="pagination">
-				{% if paginator.previous_page %}
-				{% if paginator.previous_page == 1 %}
-				<li><a href="/">Prev</a></li>
-				{% else %}
-				<li><a href="/page{{ paginator.previous_page }}">Prev</a></li>
-				{% endif %}
-				{% else %}
-				<li class="disabled"><a>Prev</a></li>
-				{% endif %}
-				{% if paginator.page == 1 %}
-				<li class="active"><a>1</a></li>
-				{% else %}
-				<li><a href="/">1</a></li>
-				{% endif %}
-				{% for count in (2..paginator.total_pages) %}
-					{% if count == paginator.page %}
-					<li class="active"><a>{{ count }}</a></li>
-					{% else %}
-					<li><a href="/page{{ count }}">{{ count }}</a></li>
-					{% endif %}
-				{% endfor %}
-				{% if paginator.next_page %}
-				<li><a href="/page{{ paginator.next_page }}">Next</a></li>
-				{% else %}
-				<li class="disabled"><a>Next</a></li>
-				{% endif %}
-			</ul>
+	<section class="content-section video-section">
+	  <div class="pattern-overlay">
+	  <a id="bgndVideo" class="player" data-property="{videoURL:'https://www.youtube.com/watch?v=BkBEM_JK08w',containment:'.video-section', quality:'large', autoPlay:true, mute:true, opacity:1}">bg</a>
+		<div class="container">
+		  <div class="row">
+			<div class="col-lg-12">
+			<h1>SMAC Project</h1>  
+			<h3>A Modular Robotic Toolkit for Engaging Kids into Science, Technology, Engineering and Mathematic</h3>
+		   </div>
+		  </div>
 		</div>
-	</div>
+	  </div>
+	</section>
 </div>
