restructured blogs into a folder and added timeline on main page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@ layout: default-fluid
 ---
 
 <!-- Warming Up -->
-<link href='http://fonts.googleapis.com/css?family=Buenard:700' rel='stylesheet' type='text/css'>
-<script src="http://pupunzi.com/mb.components/mb.YTPlayer/demo/inc/jquery.mb.YTPlayer.js"></script>
+<!--<link href='http://fonts.googleapis.com/css?family=Buenard:700' rel='stylesheet' type='text/css'>-->
+<link href="/css/video.css" rel="stylesheet">
+<link href="/css/timeline.css" rel="stylesheet">
+<script src="/js/video.js"></script>
+<script src="/js/jquery.mb.YTPlayer.js"></script>
 
 <div class="row">
 	<section class="content-section video-section">
@@ -21,4 +24,48 @@ layout: default-fluid
 		</div>
 	  </div>
 	</section>
+</div>
+
+<div class="container">
+	<div class="row">
+	<div class="col-lg-12">
+	<ul class="timeline">
+		<li>
+		  <div class="timeline-badge info"><i class="glyphicon glyphicon-hand-left"></i></div>
+		  <div class="timeline-panel">
+			<div class="timeline-heading">
+			  <h4 class="timeline-title">Middle Tennessee STEM Expo 2015</h4>
+			  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Apr 9th, 2015</small></p>
+			</div>
+			<div class="timeline-body">
+			  <p>We brought the SMAC modular platform to meet K-12 teachers and students to get their inputs. Our booth was supported by the Middle Tennessee STEM Innovation Hub... (Read more)</p>
+			</div>
+		  </div>
+		</li>
+		<li class="timeline-inverted">
+		  <div class="timeline-badge warning"><i class="glyphicon glyphicon-chevron-right"></i></div>
+		  <div class="timeline-panel">
+			<div class="timeline-heading">
+			  <h4 class="timeline-title">The NSF I-Corps Team</h4>
+			  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> Jan 11th, 2015</small></p>
+			</div>
+			<div class="timeline-body">
+			  <p>We were joining the NSF I-Corps Team program, Bay Area Cohort. Team members joining the program are... (Read more)</p>
+			</div>
+		  </div>
+		</li>
+		<li>
+		  <div class="timeline-badge danger"><i class="glyphicon glyphicon-eye-open"></i></div>
+		  <div class="timeline-panel">
+			<div class="timeline-heading">
+			  <h4 class="timeline-title">SMAC Project Init!</h4>
+			</div>
+			<div class="timeline-body">
+			  <p>The journey of SMAC began at STORM Lab, Vanderbilt University. Everyone was so exited to see its progress!</p>
+			</div>
+		  </div>
+		</li>
+	</ul>
+	</div>
+	</div>
 </div>
