minor update of font awesome clock-o

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default-fluid
 		  <div class="timeline-panel">
 			<div class="timeline-heading">
 			  <h4 class="timeline-title">Middle Tennessee STEM Expo 2015</h4>
-			  <p><small class="text-muted"><i class="fa fa-time"></i> Apr 9th, 2015</small></p>
+			  <p><small class="text-muted"><i class="fa fa-clock-o"></i> Apr 9th, 2015</small></p>
 			</div>
 			<div class="timeline-body">
 			  <p>We brought the SMAC modular platform to meet K-12 teachers and students to get their inputs. Our booth was supported by the Middle Tennessee STEM Innovation Hub... (Read more)</p>
@@ -47,7 +47,7 @@ layout: default-fluid
 		  <div class="timeline-panel">
 			<div class="timeline-heading">
 			  <h4 class="timeline-title">The NSF I-Corps Team</h4>
-			  <p><small class="text-muted"><i class="fa fa-time"></i> Jan 11th, 2015</small></p>
+			  <p><small class="text-muted"><i class="fa fa-clock-o"></i> Jan 11th, 2015</small></p>
 			</div>
 			<div class="timeline-body">
 			  <p>We were joining the NSF I-Corps Team program, Bay Area Cohort. Team members joining the program are... (Read more)</p>
